# cameraxTest

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/cameraxtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image_utils.h  native-lib.cpp  native-lib.h  postprocess.cc  postprocess.h  yolov8.cc  yolov8.h
app/src/main/java/com/example/cameraxtest/: AssetFileCopier.java  DataProvider.java  DetectResult.java  DetectResultList.java  DetectionView.java  ImageRect.java  MainActivity.java  ResourceThreadFactory.java  clsToName.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cameraxtest/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
